stylesheet.css
.jumbotron {
    margin-bottom: 0px;
    height: 625px;
    background-image: url("https://www.mistrisolutions.com/wp-content/uploads/2016/01/website-design-background.png");
    background-size: cover;
    background-position: 40% 90%;
    background-repeat: no-repeat;
    color: white;
}

body > div.jumbotron.jumbotron-fluid > div > p {
    padding-left: 3px;
    font-size: 1.5em;
}

/*NAVIGATION STYLE*/

.nav-item {
   padding-right: 35px;
}

/*WELCOME SECTION*/
.container .welcome-header {
  margin: 5px 0px;
}

.welcome-header {
    text-align: center;
    color: black;
    padding-bottom: 50px;
    padding-top: 100px;
    max-width: 100%;
    height: 165px;
}


/*IMAGE GALLERY EFFECTS*/

body > div:nth-child(4) {
  padding-top: 100px;
}

.col-md-4 {
  padding-bottom: 15px;
}

.col-md-4 .image-container {
    margin-top: 25px;
}

.hovereffect {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
  cursor: default;
  background: gray;
}

.hovereffect .overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  padding: 50px 20px;
}

.hovereffect img {
  display: block;
  position: relative;
  max-width: none;
  width: calc(100% + 20px);
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: translate3d(-10px,0,0);
  transform: translate3d(-10px,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.hovereffect:hover img {
  opacity: 0.4;
  filter: alpha(opacity=40);
  -webkit-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.hovereffect h2 {
  text-transform: uppercase;
  color: #fff;
  text-align: center;
  position: relative;
  font-size: 17px;
  overflow: hidden;
  padding: 0.5em 0;
  background-color: transparent;
}

.hovereffect h2:after {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background: #fff;
  content: '';
  -webkit-transition: -webkit-transform 0.35s;
  transition: transform 0.35s;
  -webkit-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
}

.hovereffect:hover h2:after {
  -webkit-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.hovereffect a, .hovereffect p {
  color: #FFF;
  opacity: 0;
  filter: alpha(opacity=0);
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: translate3d(100%,0,0);
  transform: translate3d(100%,0,0);
}

.hovereffect:hover a, .hovereffect:hover p {
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.project-container {
  padding-top: 140px;
}

/*ABOUT PAGE*/

.matt-photo {
  border-radius: 50%;
}

.about-matt {
  padding: 100px;
}


/*PROJECTS PAGE*/

@media only screen and (max-width: 768px) {
  div.col-md-4.project-container {
    text-align: center;
  }
}

.hrstyle {
	height: 10px;
	border: 0;
	box-shadow: 0 10px 10px -10px #8c8b8b inset;
}

.container .application-header {
  margin: 5px 0px;
}

.application-header {
    text-align: center;
    color: black;
    padding-bottom: 150px;
    padding-top: 100px;
    max-width: 100%;
    height: 165px;
}

/*CONTACT FORM*/

.form-container {
  width: 75%;
}


/*FOOTER*/

footer {
    padding: 25px 25px;
    margin-top: 25px;
    background-color: #f8f9fa;
    min-width: 100%;
    color: rgba(0,0,0,.7);
}


/*FOOTER ICONS*/

.footer-icons {

}

